# coreca

./: README.md  pyproject.toml
src/core/: __init__.py
src/coreca/: __init__.py  lifespans.py
